--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="expander"></div>
 	<div class="colorPicker">
 		
-		<div data-id="#ffffff" class="color"></div>
+<!-- 		<div data-id="#ffffff" class="color"></div>
 		<div data-id="#000000" class="color"></div>
 
 		<div data-id="#ff0000" class="color"></div>
@@ -28,7 +28,7 @@
 		<div data-id="#0000ff" class="color"></div>
 		<div data-id="#4444ff" class="color"></div>
 		<div data-id="#8888ff" class="color"></div>
-		<div data-id="#eeeeff" class="color"></div>
+		<div data-id="#eeeeff" class="color"></div> -->
 
 	</div>
 </div>
