prep for merge into master

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,9 +8,9 @@
 }
 .shard{
 	&.selected{
-		stroke: #ffaaaa !important;
+		stroke: #ff2222 !important;
 		stroke-opacity: .8 !important;
-		stroke-width: 15px !important;
+		stroke-width: 2px !important;
 	}
 }
 .rmScroll{
