--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,16 @@
+<!-- <div class="formWrapper">
+	<div class="form" id="file_form">
+		<form action="post">
+			<input type="file" id="file_field">
+			<input type="submit" id="file_submit" class="full-width">
+		</form>
+	</div>
+</div> -->
+
+
+<input name="file" type="file" 
+   class="cloudinary-fileupload" data-cloudinary-field="image_id" 
+   data-form-data=" ... html-escaped JSON data ... " ></input>
 <div class="drawingInterface">
 	<div id="currentColor"></div>
 	<div class="colorPicker">
@@ -34,7 +47,6 @@
 </div>
 <div id="opacity">
 	<input class="slider" type="range" min="0" max="10">
-
 </div>
 <div class="controls">
 	<div id="removeImg" class="tool">remove image</div>
