styling and controller changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,17 @@
 
+<div class="wrapper">
 <div class="formWrapper hidden">
-	<div class="form" id="file_form">
+	<div class="backDrop"></div>
+	<div class="form clearfix" id="file_form">
 		<%= form_tag(images_create_path, :id => "cloudinary", :method => :post, :remote => true, :data => { :remote => true }, "data-type" => "json", :html => { :multipart => true }) do  %>
-			<%= file_field_tag :file %>
+			
+			<div class="upload-button btn col-8">
+				<span>Upload file</span>
+				<%= file_field_tag :file, :class => 'upload-field'%>	
+			</div>
+			<%= submit_tag "submit" , :class => 'upload-submit btn col-4'%>	
 		  	<%#= cl_image_upload_tag(:image_id, :name => "image_id") %>
-		  	<%= submit_tag "Upload" %>
+		  	
 		<% end %>
 	</div>
 </div>
@@ -14,7 +21,7 @@
    data-form-data=" ... html-escaped JSON data ... " ></input>
 </form> -->
 <div class="drawingInterface">
-	<div id="currentColor"></div>
+
 	<div class="colorPicker">
 		
 <!-- 		<div data-id="#ffffff" class="color"></div>
@@ -51,12 +58,14 @@
 	<input class="slider" type="range" min="0" max="10">
 </div>
 <div class="controls">
-	<div id="removeImg" class="tool">remove image</div>
-	<div id="addImg" class="tool"> add Image </div>
-	<div id="selector" class="tool" data-id="selector">selector </div>
-	<div id="pen" class="tool" data-id="pen">pen </div>
-	<div id="clear" class="tool">clear</div>
+	<div id="removeImg" class="tool"><i class="fa fa-times"></i></div>
+	<div id="addImg" class="tool"> <i class="fa fa-plus"></i></div>
+	<div id="selector" class="tool" data-id="selector"><i class="fa fa-arrows"></i></div>
+	<div id="pen" class="tool selected" data-id="pen"><i class="fa fa-pencil"></i></div>
+	<div id="clear" class="tool"><i class="fa fa-trash"></i></div>
+	<div id="currentColor"></div>
 <!-- 	<div id="undo" class="tool">undo</div>
 	<div id="redo" class="tool">redo</div> -->
 </div>
 <svg id="pt-canvas"></svg>
+</div>
