--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,6 +6,10 @@
 	box-sizing: border-box;
 	margin:0;
 }
+.btn{
+	text-transform:uppercase;
+	font-weight:300;
+}
 .shard{
 	&.selected{
 		stroke: #ff2222 !important;
@@ -32,7 +36,15 @@ nav{
 	left:0;
 	bottom:0;
 	right:0;
+	z-index:0;
+	transition: all .4s;
+	.backDrop{
+		@extend .formWrapper;
+		z-index:-500;
+	}
 	.form{
+		z-index: 100;
+		padding:25px;
 		position:relative;
 		text-align:center;
 		display:block;
@@ -42,7 +54,7 @@ nav{
 		background: white;
 		input{
 			display:block;
-			margin-top: 25px;
+			// margin-top: 25px;
 		}
 	}
 }
@@ -80,6 +92,7 @@ nav{
 }
 
 .color{
+	position:relative;
 	width:100%;
 	height:40px;
 	&:hover{
@@ -91,22 +104,22 @@ nav{
 	&.selected{
 		transition: all .4s;
 		height:80px;
-		border-right: 50px solid rgba(0,0,0,0.8);
-		border-top: 2px solid #2c2c2c;
-		border-bottom:2px solid #2c2c2c;
+		// border-right: 50px solid rgba(0,0,0,0.8);
 	}
 }
 #currentColor{
-	@extend .color;
-	height:200px !important;
+	@extend .tool;
+	// @extend .color;
+	// height:200px !important;
 	background: rgba(0,25,125,0.9);
-	&:hover{
-		// height:200px;
-		border:none;
-	}
-	&.selected{
-		border:0px !important;
-	}
+	border: 1px solid #aaa;
+	// &:hover{
+	// 	// height:200px;
+	// 	border:none;
+	// }
+	// &.selected{
+	// 	border:0px !important;
+	// }
 }
 
 .controls{
@@ -115,7 +128,7 @@ nav{
 }
 #beginning{
 	fill: rgba(255,255,255,0.9) !important;
-	stroke: #ffeeee;
+	stroke: #ff2222;
 	z-index:10000;
 	&:hover{
 		stroke: #ff2222;
@@ -136,14 +149,18 @@ nav{
 }
 
 .tool{
+	i{
+		display:table-cell;
+		vertical-align:middle;
+	}
 	text-align:center;
-	padding-top:25px;
-	display:block;
+	// padding-top:25px;
+	display:table;
 	cursor: pointer;
 	background: black;
 	color: white;
-	width: 100px;
-	height: 100px;
+	width: 60px;
+	height: 60px;
 	margin-top:15px;
 	transition: background .4s;
 	&:hover{
@@ -152,8 +169,68 @@ nav{
 
 	}
 	&.selected{
-		background: #ffaaaa;
+		background: #00e7a8;
 		color: black;
 		transition: background .4s;
 	}
+}
+.upload-button{
+    position: relative;
+    // background: #44aaff;
+	background: #2c2c2c;
+	border: 4px solid #2c2c2c;
+
+    // border-right:0px;
+    transition: all .4s;
+    border-radius: 2px;
+    overflow: hidden;
+    color: #44aaff;
+
+    margin: 0px;
+    padding: 12px;
+    float:left;
+    &:hover{
+    	background: #44aaff;
+    	border: 4px solid #44aaff;	
+		color: white;
+    }
+    &.active{
+    	color: #00e7a8;
+    }
+}
+.upload-submit{
+	background: #2c2c2c;
+	border: 4px solid #2c2c2c;
+	color: #fff;
+	border-left: 2px solid #aaa;
+	padding:12px;
+	float:left;
+	transition: all .4s;
+	&.prompt-user{
+		background: #00e7a8;
+		color: #2c2c2c;
+		border: 4px solid #00e7a8;
+		&:hover{
+			background: #00c6a5;
+			border: 4px solid #00c6a5;
+			color: #2c2c2c
+		}	
+	}
+	&:hover{
+		background: #aaa;
+		border: 4px solid #aaa;
+		color: #2c2c2c;
+	}
+}
+.formWrapper .form .upload-field{
+	margin-top:0px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 12px;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
 }
