--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>ProtoTypr</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,13 +10,18 @@
 </head>
 <body>
 <nav class="primary-nav">
+	<% if !user_signed_in?%>
 	<ul>
 		<%= link_to('Sign Up', new_user_registration_path) %>
-		<%= link_to('Sign In',new_user_session_path) %>
+		<%= link_to('Sign In',	new_user_session_path) %>
 	</ul>
+	<% else %>
+	<p>Hello <%= @user %></p>
+	<%= link_to('Sign Out',destroy_user_session_path, :method => :delete) %>
+	<% end %>
 </nav>
-<div class="wrapper">
+
 	<%= yield %>
-</div>
+
 </body>
 </html>
