--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,6 +65,8 @@
 	<div id="moveDown" class="tool"><i class="fa fa-arrow-down"></i></div>
 	<div id="currentStroke" class="colorPalette"></div>
 	<div id="currentColor" class="colorPalette"></div>
+	<!-- <div id="save" class="tool"><i class="fa fa-floppy-o"></i></div> -->
+
 	<div id="opacity" class="hidden">
 		<input class="slider" type="range" min="0" max="10">
 	</div>
